# makerx-ai-agents

./: README.md  ai-agents.code-workspace  makerx-ai-agents.code-workspace
.github/workflows/: ai-agents-cd.yaml  ai-agents-ci.yaml
projects/ai-agents/: .algokit.toml  README.md  pyproject.toml
projects/ai-agents/.algokit/: .copier-answers.yml
projects/algorand-agent-mcp-server/: .env.template  AiRegistry.arc56.json  README.md  package-lock.json  package.json  requirements.txt
projects/algorand-agent-mcp-server/src/: AiRegistry.ts  index.ts  test_client.ts
projects/makerx-agent-deployer/: .algokit.toml  README.md  package.json  pnpm-lock.yaml
projects/makerx-agent-deployer/.algokit/: .copier-answers.yml
projects/makerx-agent-deployer/src/: vite-env.d.ts
projects/makerx-agent-deployer/src/components/: AgentDeployer.tsx  AppCalls.tsx  ContractsManager.tsx  Dashboard.tsx
projects/makerx-ai-agents/: .algokit.toml  README.md  pyproject.toml
projects/makerx-ai-agents/.algokit/: .copier-answers.yml
projects/makerx-ai-agents/smart_contracts/: __main__.py
projects/makerx-ai-agents/smart_contracts/ai_lsig/: contract.py
projects/makerx-ai-agents/smart_contracts/ai_registry/: contract.py  deploy_config.py
projects/makerx-ai-agents/smart_contracts/artifacts/ai_lsig/: ai_lsig.puya.map  ai_lsig.teal
projects/makerx-ai-agents/smart_contracts/artifacts/ai_registry/: AiRegistry.approval.puya.map  AiRegistry.approval.teal  AiRegistry.arc56.json  ai_registry_client.py
projects/makerx-ai-agents/smart_contracts/artifacts/hello_world/: hello_world_client.py
